created the base notification class
This will store the message, id's for all corresponding creators and the time created

--- a/javadocs/index-files/index-17.html
+++ b/javadocs/index-files/index-17.html
@@ -61,7 +61,7 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Removes the event poster image for the given event.</div>
 </dd>
-<dt><a href="../ca/cmput301t05/placeholder/profile/Profile.html#removeNotification(ca.cmput301t05.placeholder.notifications.UserNotification)" class="member-name-link">removeNotification(UserNotification)</a> - Method in class ca.cmput301t05.placeholder.profile.<a href="../ca/cmput301t05/placeholder/profile/Profile.html" title="class in ca.cmput301t05.placeholder.profile">Profile</a></dt>
+<dt><a href="../ca/cmput301t05/placeholder/profile/Profile.html#removeNotification(ca.cmput301t05.placeholder.notifications.Notification)" class="member-name-link">removeNotification(UserNotification)</a> - Method in class ca.cmput301t05.placeholder.profile.<a href="../ca/cmput301t05/placeholder/profile/Profile.html" title="class in ca.cmput301t05.placeholder.profile">Profile</a></dt>
 <dd>
 <div class="block">This method removes the given UserNotification from the list of notifications in the Profile class.</div>
 </dd>
