--- a/javadocs/index-files/index-1.html
+++ b/javadocs/index-files/index-1.html
@@ -55,7 +55,7 @@ loadScripts(document, 'script');</script>
 <dl class="index">
 <dt><a href="../ca/cmput301t05/placeholder/ExampleUnitTest.html#addition_isCorrect()" class="member-name-link">addition_isCorrect()</a> - Method in class ca.cmput301t05.placeholder.<a href="../ca/cmput301t05/placeholder/ExampleUnitTest.html" title="class in ca.cmput301t05.placeholder">ExampleUnitTest</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="../ca/cmput301t05/placeholder/profile/Profile.html#addNotification(ca.cmput301t05.placeholder.notifications.UserNotification)" class="member-name-link">addNotification(UserNotification)</a> - Method in class ca.cmput301t05.placeholder.profile.<a href="../ca/cmput301t05/placeholder/profile/Profile.html" title="class in ca.cmput301t05.placeholder.profile">Profile</a></dt>
+<dt><a href="../ca/cmput301t05/placeholder/profile/Profile.html#addNotification(ca.cmput301t05.placeholder.notifications.Notification)" class="member-name-link">addNotification(UserNotification)</a> - Method in class ca.cmput301t05.placeholder.profile.<a href="../ca/cmput301t05/placeholder/profile/Profile.html" title="class in ca.cmput301t05.placeholder.profile">Profile</a></dt>
 <dd>
 <div class="block">Adds a UserNotification to the list of notifications.</div>
 </dd>
