Refactor database and utility classes file structure
Updated the package structure in the database and utilities section to enhance the organization of classes and interfaces. This involved updating import statements throughout the application to accurately reflect the changes in the package structure.

--- a/javadocs/ca/cmput301t05/placeholder/database/BaseImageHandler.html
+++ b/javadocs/ca/cmput301t05/placeholder/database/BaseImageHandler.html
@@ -68,7 +68,7 @@ loadScripts(document, 'script');</script>
 <h1 title="Class BaseImageHandler" class="title">Class BaseImageHandler</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
-<div class="inheritance">ca.cmput301t05.placeholder.database.BaseImageHandler</div>
+<div class="inheritance">ca.cmput301t05.placeholder.database.images.BaseImageHandler</div>
 </div>
 <section class="class-description" id="class-description">
 <dl class="notes">
