--- a/javadocs/ca/cmput301t05/placeholder/events/Event.html
+++ b/javadocs/ca/cmput301t05/placeholder/events/Event.html
@@ -72,7 +72,7 @@ loadScripts(document, 'script');</script>
 <h1 title="Class Event" class="title">Class Event</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
-<div class="inheritance"><a href="../database/DocumentSerializable.html" title="class in ca.cmput301t05.placeholder.database">ca.cmput301t05.placeholder.database.DocumentSerializable</a>
+<div class="inheritance"><a href="../database/DocumentSerializable.html" title="class in ca.cmput301t05.placeholder.database">ca.cmput301t05.placeholder.database.utils.DocumentSerializable</a>
 <div class="inheritance">ca.cmput301t05.placeholder.events.Event</div>
 </div>
 </div>
