--- a/javadocs/index-files/index-15.html
+++ b/javadocs/index-files/index-15.html
@@ -94,7 +94,7 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="../ca/cmput301t05/placeholder/database/ProfileTableTest.html#%3Cinit%3E()" class="member-name-link">ProfileTableTest()</a> - Constructor for class ca.cmput301t05.placeholder.database.<a href="../ca/cmput301t05/placeholder/database/ProfileTableTest.html" title="class in ca.cmput301t05.placeholder.database">ProfileTableTest</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="../ca/cmput301t05/placeholder/database/Table.html#pushDocument(T,java.lang.String,ca.cmput301t05.placeholder.database.Table.DocumentCallback)" class="member-name-link">pushDocument(T, String, Table.DocumentCallback&lt;T&gt;)</a> - Method in class ca.cmput301t05.placeholder.database.<a href="../ca/cmput301t05/placeholder/database/Table.html" title="class in ca.cmput301t05.placeholder.database">Table</a></dt>
+<dt><a href="../ca/cmput301t05/placeholder/database/Table.html#pushDocument(T,java.lang.String,ca.cmput301t05.placeholder.database.tables.Table.DocumentCallback)" class="member-name-link">pushDocument(T, String, Table.DocumentCallback&lt;T&gt;)</a> - Method in class ca.cmput301t05.placeholder.database.<a href="../ca/cmput301t05/placeholder/database/Table.html" title="class in ca.cmput301t05.placeholder.database">Table</a></dt>
 <dd>
 <div class="block">Pushes a document to the Firestore collection with the specified document ID and calls the callback methods based on the result of the operation.</div>
 </dd>
