--- a/javadocs/ca/cmput301t05/placeholder/database/DocumentSerializable.html
+++ b/javadocs/ca/cmput301t05/placeholder/database/DocumentSerializable.html
@@ -72,7 +72,7 @@ loadScripts(document, 'script');</script>
 <h1 title="Class DocumentSerializable" class="title">Class DocumentSerializable</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
-<div class="inheritance">ca.cmput301t05.placeholder.database.DocumentSerializable</div>
+<div class="inheritance">ca.cmput301t05.placeholder.database.utils.DocumentSerializable</div>
 </div>
 <section class="class-description" id="class-description">
 <dl class="notes">
