--- a/javadocs/ca/cmput301t05/placeholder/database/ProfileImageHandler.html
+++ b/javadocs/ca/cmput301t05/placeholder/database/ProfileImageHandler.html
@@ -72,8 +72,8 @@ loadScripts(document, 'script');</script>
 <h1 title="Class ProfileImageHandler" class="title">Class ProfileImageHandler</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
-<div class="inheritance"><a href="BaseImageHandler.html" title="class in ca.cmput301t05.placeholder.database">ca.cmput301t05.placeholder.database.BaseImageHandler</a>
-<div class="inheritance">ca.cmput301t05.placeholder.database.ProfileImageHandler</div>
+<div class="inheritance"><a href="BaseImageHandler.html" title="class in ca.cmput301t05.placeholder.database">ca.cmput301t05.placeholder.database.images.BaseImageHandler</a>
+<div class="inheritance">ca.cmput301t05.placeholder.database.images.ProfileImageHandler</div>
 </div>
 </div>
 <section class="class-description" id="class-description">
