--- a/javadocs/ca/cmput301t05/placeholder/database/ProfileTable.html
+++ b/javadocs/ca/cmput301t05/placeholder/database/ProfileTable.html
@@ -68,8 +68,8 @@ loadScripts(document, 'script');</script>
 <h1 title="Class ProfileTable" class="title">Class ProfileTable</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
-<div class="inheritance"><a href="Table.html" title="class in ca.cmput301t05.placeholder.database">ca.cmput301t05.placeholder.database.Table</a>&lt;<a href="../profile/Profile.html" title="class in ca.cmput301t05.placeholder.profile">Profile</a>&gt;
-<div class="inheritance">ca.cmput301t05.placeholder.database.ProfileTable</div>
+<div class="inheritance"><a href="Table.html" title="class in ca.cmput301t05.placeholder.database">ca.cmput301t05.placeholder.database.tables.Table</a>&lt;<a href="../profile/Profile.html" title="class in ca.cmput301t05.placeholder.profile">Profile</a>&gt;
+<div class="inheritance">ca.cmput301t05.placeholder.database.tables.ProfileTable</div>
 </div>
 </div>
 <section class="class-description" id="class-description">
@@ -86,7 +86,7 @@ loadScripts(document, 'script');</script>
 <section class="nested-class-summary" id="nested-class-summary">
 <h2>Nested Class Summary</h2>
 <div class="inherited-list">
-<h2 id="nested-classes-inherited-from-class-ca.cmput301t05.placeholder.database.Table">Nested classes/interfaces inherited from class&nbsp;ca.cmput301t05.placeholder.database.<a href="Table.html" title="class in ca.cmput301t05.placeholder.database">Table</a></h2>
+<h2 id="nested-classes-inherited-from-class-ca.cmput301t05.placeholder.database.tables.Table">Nested classes/interfaces inherited from class&nbsp;ca.cmput301t05.placeholder.database.<a href="Table.html" title="class in ca.cmput301t05.placeholder.database">Table</a></h2>
 <code><a href="Table.DocumentCallback.html" title="interface in ca.cmput301t05.placeholder.database">Table.DocumentCallback</a>&lt;<a href="Table.DocumentCallback.html" title="type parameter in Table.DocumentCallback">T</a>&gt;</code></div>
 </section>
 </li>
@@ -123,8 +123,8 @@ loadScripts(document, 'script');</script>
 <section class="method-summary" id="method-summary">
 <h2>Method Summary</h2>
 <div class="inherited-list">
-<h3 id="methods-inherited-from-class-ca.cmput301t05.placeholder.database.Table">Methods inherited from class&nbsp;ca.cmput301t05.placeholder.database.<a href="Table.html" title="class in ca.cmput301t05.placeholder.database">Table</a></h3>
-<code><a href="Table.html#fetchDocument(java.lang.String,ca.cmput301t05.placeholder.database.Table.DocumentCallback)">fetchDocument</a>, <a href="Table.html#pushDocument(T,java.lang.String,ca.cmput301t05.placeholder.database.Table.DocumentCallback)">pushDocument</a></code></div>
+<h3 id="methods-inherited-from-class-ca.cmput301t05.placeholder.database.tables.Table">Methods inherited from class&nbsp;ca.cmput301t05.placeholder.database.<a href="Table.html" title="class in ca.cmput301t05.placeholder.database">Table</a></h3>
+<code><a href="Table.html#fetchDocument(java.lang.String,ca.cmput301t05.placeholder.database.tables.Table.DocumentCallback)">fetchDocument</a>, <a href="Table.html#pushDocument(T,java.lang.String,ca.cmput301t05.placeholder.database.tables.Table.DocumentCallback)">pushDocument</a></code></div>
 <div class="inherited-list">
 <h3 id="methods-inherited-from-class-java.lang.Object">Methods inherited from class&nbsp;java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">Object</a></h3>
 <code><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#equals(java.lang.Object)" title="class or interface in java.lang" class="external-link">equals</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#getClass()" title="class or interface in java.lang" class="external-link">getClass</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#hashCode()" title="class or interface in java.lang" class="external-link">hashCode</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#notify()" title="class or interface in java.lang" class="external-link">notify</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#notifyAll()" title="class or interface in java.lang" class="external-link">notifyAll</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#toString()" title="class or interface in java.lang" class="external-link">toString</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#wait()" title="class or interface in java.lang" class="external-link">wait</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#wait(long)" title="class or interface in java.lang" class="external-link">wait</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#wait(long,int)" title="class or interface in java.lang" class="external-link">wait</a></code></div>
@@ -147,7 +147,7 @@ loadScripts(document, 'script');</script>
 <dt>See Also:</dt>
 <dd>
 <ul class="see-list">
-<li><a href="../../../../constant-values.html#ca.cmput301t05.placeholder.database.ProfileTable.COLLECTION_NAME">Constant Field Values</a></li>
+<li><a href="../../../../constant-values.html#ca.cmput301t05.placeholder.database.tables.ProfileTable.COLLECTION_NAME">Constant Field Values</a></li>
 </ul>
 </dd>
 </dl>
